--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   },
-  "name": "blockchain_dp1",
+  "name": "bhorsha-pay",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
